<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile" android:icon="@android:drawable/ic_menu_view"
            android:title="@string/profile" />
        <item android:id="@+id/nav_products" android:icon="@android:drawable/ic_menu_add"
            android:title="@string/products" />
        <item android:id="@+id/nav_config" android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/configurations" />
    </group>
    <item android:title="@string/more">
        <menu>
            <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_input_delete"
                    android:title="@string/exit" />
        </menu>
    </item>
</menu>